# VMC_Quadruped_Controller

./: CMakeLists.txt  README.md  package.xml  测试报告.txt  运行环境.txt
include/: cycloid.h  foot_controller.h  kinematics.h  nav_liner.h  navigator.h  pid.h
launch/: dog.launch.py  nav_liner.launch.py
msg/: FootCmd.msg  MoveCmd.msg
src/: cycloid.cpp  foot_controller.cpp  kinematics.cpp  motor.cpp  nav_liner.cpp  navigator.cpp  pid.cpp
